# personal-Q

./: .ai_state  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .railwayignore  CREWAI_IMPLEMENTATION_PLAN.md  CREWAI_SUMMARY.md  CURRENT_STATE_ANALYSIS.md  DEPLOYMENT.md  Dockerfile.celery-worker  Dockerfile.frontend  FUTURE_CONSIDERATIONS.md  IMPLEMENTATION_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  LICENSE  Makefile  PROJECT_DECISIONS.md  PROJECT_SPECIFICATION.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  index.html  new-settings.json  npm_audit_report.json  package.json  playwright.config.ts  railway.toml  setup-dev.sh  vite.config.ts
.ai-assisted/rules/: registry.yaml
.claude/: context-memory.json
.claude/agents/: ai-infrastructure-specialist.md  code-review-orchestrator.md  fastapi-backend-architect.md  react-frontend-architect.md  security-auditor.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
backend/: .coverage.Ovidius-MacBook-Pro.local.51382.XRWYxaAx  .env.example  .gitignore  .railwayignore  CREWAI_ENABLED.md  Dockerfile  PROJECT_DECISIONS.md  README.md  alembic.ini  current_packages.txt  entrypoint.sh  generate_encryption_key.py  package.json  pyproject.toml  pytest.ini  railway.toml  remove_syspath.py  requirements.txt  setup.py
backend/app/: exceptions.py  main.py
backend/app/db/: __init__.py  chroma_client.py  database.py  encrypted_types.py  init_db.py  lance_client.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/integrations/: __init__.py  microsoft_graph_client.py  obsidian_client.py  slack_client.py
backend/app/middleware/: __init__.py  logging_middleware.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  activity.py  agent.py  api_key.py  schedule.py  task.py
backend/app/routers/: __init__.py  activities.py  agents.py  auth.py  auth_test.py  llm.py  metrics.py  settings.py  tasks.py  websocket.py
backend/app/schemas/: __init__.py  activity.py  agent.py  errors.py  llm.py  settings.py  task.py
backend/app/security/: prompt_sanitizer.py
backend/app/services/: __init__.py  agent_service.py  cache_service.py  crew_service.py  encryption_service.py  llm_service.py  memory_service.py  model_validator.py  prompt_sanitizer.py  provider_registry.py  trend_calculator.py
backend/app/utils/: __init__.py  datetime_utils.py  security_helpers.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/config/: settings.py
backend/migrations/: env.py
backend/migrations/versions/: 20251008_2100_001_initial_schema.py  20251012_add_trend_indexes.py
backend/tests/: conftest.py
backend/tests/integration/: test_activities_api.py  test_agents_api.py  test_api_key_config.py  test_cookie_auth.py  test_metrics_api.py  test_settings_api.py  test_task_cancellation.py  test_tasks_api.py
backend/tests/unit/: test_agent_service.py  test_crew_service.py  test_database.py  test_datetime_utils.py  test_llm_service.py  test_memory_service.py  test_models.py  test_obsidian_security.py  test_trend_calculator.py  test_websocket_broadcasts.py
docs/: INSTALLATION.md  ci-cd-setup.md  testing-auth.md  testing-guide.md  validation-checklist.md
docs/security/: 2025-10-13-security-report.md  2025-10-14-security-report.md  2025-10-16-security-report.md  2025-10-18-security-report.md  2025-10-pr84-security-audit.md  2025-10-security-audit-report.md  2025-10-security-report-updated.md  2025-10-security-report.md  RECOMMENDATIONS.md
src/: App.tsx  main.tsx
src/components/: ProtectedRoute.tsx  (+1 more)
tests/: README.md  agent-card.spec.ts  agent-update-integration.spec.ts  agent-update.spec.ts  agents.spec.ts  auth-test-endpoint-security.spec.ts  auth.spec.ts  debug-blank-screen.spec.ts  debug-rendering.spec.ts  example.spec.ts  oauth-callback.spec.ts  oauth-google-integration.spec.ts  settings-page.spec.ts  settings.spec.ts  tasks.spec.ts  ui-integration.spec.ts
(+53 files in other folders)
