[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-q"
version = "1.0.0"
description = "Personal-Q AI Agent Management System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Ovidiu Eftimie", email = "noreply@github.com"}
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "aiosqlite==0.20.0",
    "chromadb==0.5.18",
    "anthropic==0.39.0",
    "celery==5.4.0",
    "redis==5.2.0",
    "slack-sdk==3.33.4",
    "msgraph-sdk==1.12.0",
    "azure-identity==1.19.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "httpx==0.27.2",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "greenlet==3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=app --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

