[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-q"
version = "1.0.0"
description = "Personal-Q AI Agent Management System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Ovidiu Eftimie", email = "noreply@github.com"}
]

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.0",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "aiosqlite==0.20.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "psycopg2-binary>=2.9.9",  # Sync PostgreSQL driver (for Celery/Alembic)
    "lancedb>=0.17.0",
    "sentence-transformers>=2.2.0",  # For LanceDB embeddings
    "anthropic>=0.39.0",
    "celery==5.4.0",
    "redis==5.2.0",
    "slack-sdk==3.33.4",
    "msgraph-sdk==1.12.0",
    "azure-identity==1.19.0",
    "python-dotenv>=1.0.1",
    "python-multipart==0.0.19",
    "httpx==0.27.2",
    "websockets==14.1",
    "aiofiles==24.1.0",
    "greenlet==3.1.1",
    "tenacity>=8.2.3,<9.0.0,!=8.4.0",
    "pybreaker==1.2.0",
    "authlib==1.3.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.3",
    "slowapi==0.1.9",
    "itsdangerous>=2.1.2",
    "langchain-anthropic>=0.1.23,<0.3.0",
    "langchain-core>=0.2.26,<0.3.0",
    "crewai>=0.86.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=app --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]
